----------------------
Changelog for SEO Tab
----------------------
SEOTAB 2.0.4-pl
==============
- Added options for generating template specific sitemaps and image sitemaps

SEOTAB 2.0.3-pl
==============
- Add searchable default property from system setting on new resources

SEOTAB 2.0.2-pl
==============
- Fix issue where changing resource template 'searchable' value was reset

SEOTAB 2.0.1-pl
==============
- Rewrite [] to array() for backwards compatibility

SEOTab 2.0.0-pl
==============
- PLEASE NOTE: THIS UPDATE CONTAINS A MIGRATION SCRIPT - READ ABOUT THE RISKS on https://github.com/Sterc/SEOTab
- 301 redirects are now stored in a separate table (migration page included)
- New custom manager page for viewing and managing 301 redirects
- Added systemsetting for excluding usergroups from accessing SEOTab #39
- Automatically add redirect for resource and children when moving or changing alias/uri (thanks to Michael Engel). PR#63
- Menu description was added
- Text is updated
- Added 'http' check-up and entered pre-populated text field
- Fixed bug #61: OnPageNotFound doesn't works correctly on site with many resources
- Fixed bug #71: Target / Resource URL Dialog + Enhancement
- Fixed bug #72: Sorting options
- Fixed bug #73: Confirmation dialog added
- Fixed bug #74: Duplicate-redirect check
- Fixed bug #81: 301 from context2 to context1 results in 404
- Fixed bug #85: 301 redirect of current page URL is not allowed
- Fixed bug #86: noindex results in exclusion from the sitemap
- Fixed bug #92: Migration dies on timeout
- Fixed bug #93: Deleting saved objects onEmptyTrash
- Fixed bug #94: All pages set to noindex,nofollow after installation
- Fixed bug #98: Memory issues after installation

SEOTab 1.2.2-pl
==============
- Changed author
- Removed development files
- Added automatically adding 301 redirects if alias of page is changed #42
- Added option to set params outerTpl and rowTpl for StercSeoSiteMap snippet #52

SEOTab 1.2.1-pl
==============